--- a/CustomSteamTools/TF2TradingToolkit/packages.config
+++ b/CustomSteamTools/TF2TradingToolkit/packages.config
@@ -10,4 +10,5 @@
   <package id="Rx-WPF" version="2.2.5" targetFramework="net46" />
   <package id="Rx-XAML" version="2.2.5" targetFramework="net46" />
   <package id="System.Windows.Interactivity.WPF" version="2.0.20525" targetFramework="net46" />
+  <package id="UltimateUtil" version="1.1.0.6" targetFramework="net46" />
 </packages>
