Items page is mostly finished

--- a/CustomSteamTools/TF2TradingToolkit/TF2TradingToolkit.csproj
+++ b/CustomSteamTools/TF2TradingToolkit/TF2TradingToolkit.csproj
@@ -105,6 +105,8 @@
     </ApplicationDefinition>
     <Compile Include="Util.cs" />
     <Compile Include="ViewModel\ItemViewModel.cs" />
+    <Compile Include="ViewModel\PricedViewModel.cs" />
+    <Compile Include="ViewModel\UnusualViewModel.cs" />
     <Compile Include="View\ItemsView.xaml.cs">
       <DependentUpon>ItemsView.xaml</DependentUpon>
     </Compile>
