--- a/CustomSteamTools/TF2TradingToolkit/TF2TradingToolkit.csproj
+++ b/CustomSteamTools/TF2TradingToolkit/TF2TradingToolkit.csproj
@@ -104,10 +104,14 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Util.cs" />
+    <Compile Include="ViewModel\ItemInstanceViewModel.cs" />
     <Compile Include="ViewModel\ItemViewModel.cs" />
     <Compile Include="ViewModel\PlayerViewModel.cs" />
     <Compile Include="ViewModel\PricedViewModel.cs" />
     <Compile Include="ViewModel\UnusualViewModel.cs" />
+    <Compile Include="View\BackpackPageControl.xaml.cs">
+      <DependentUpon>BackpackPageControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\BackpackView.xaml.cs">
       <DependentUpon>BackpackView.xaml</DependentUpon>
     </Compile>
@@ -153,6 +157,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="View\BackpackPageControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="View\BackpackView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
