Settings window is fully functional

--- a/CustomSteamTools/TF2TradingToolkit/TF2TradingToolkit.csproj
+++ b/CustomSteamTools/TF2TradingToolkit/TF2TradingToolkit.csproj
@@ -104,6 +104,9 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="MultiSelectorEventArgs.cs" />
+    <Compile Include="SettingsWindow.xaml.cs">
+      <DependentUpon>SettingsWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Util.cs" />
     <Compile Include="ViewModel\ClassifiedsListingViewModel.cs" />
     <Compile Include="ViewModel\DealExclusionViewModel.cs" />
@@ -174,6 +177,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="SettingsWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="View\BackpackPageControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
