--- a/CustomSteamTools/TF2TradingToolkit/packages.config
+++ b/CustomSteamTools/TF2TradingToolkit/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Elysium.Extra" version="1.1.7" targetFramework="net46" />
   <package id="Elysium.Theme" version="2.0.4" targetFramework="net46" />
+  <package id="MahApps.Metro" version="1.1.2.0" targetFramework="net46" />
   <package id="Rx-Core" version="2.2.5" targetFramework="net46" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="net46" />
   <package id="Rx-Linq" version="2.2.5" targetFramework="net46" />
